Creacion del menu de admin, maestro y alumno

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,10 @@
 
     <!--Custom JavaScript -->
     <script src="assets/js/custom.js"></script>
+    <!-- ============================================================== -->
+    <!-- Style switcher -->
+    <!-- ============================================================== -->
+    <script src="../assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
 
 </body>
 
